# guppyscreen

./: Makefile  README.md  lv_conf.h
.github/workflows/: guppydroid.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  lvgl-entrance.cpp
android/app/src/main/cpp/guppyscreen/: libhv  lv_conf.h  lv_drivers  lv_drv_conf.h  lv_touch_calibration  lvgl  spdlog
android/gradle/: libs.versions.toml
assets/: notosemi_12.c  notosemi_14.c  notosemi_16.c  notosemi_20.c
src/: bedmesh_panel.cpp  bedmesh_panel.h  belts_calibration_panel.cpp  belts_calibration_panel.h  button_container.cpp  button_container.h  config.cpp  extruder_panel.cpp  extruder_panel.h  fan_panel.cpp  fan_panel.h  file_panel.cpp  file_panel.h  finetune_panel.cpp  finetune_panel.h  guppyscreen.cpp  guppyscreen.h  homing_panel.cpp  homing_panel.h  inputshaper_panel.cpp  main.cpp  main_panel.cpp  main_panel.h  notify_consumer.h  print_panel.cpp  print_panel.h  print_status_panel.cpp  printer_select_panel.cpp  printertune_panel.cpp  printertune_panel.h  prompt_panel.cpp  prompt_panel.h  sensor_container.cpp  sensor_container.h  setting_panel.cpp  setting_panel.h  slider_container.cpp  slider_container.h  state.h  sysinfo_panel.cpp  (+10 more)
